--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -14,8 +14,12 @@
     "build:apk": "cd android && ./gradlew assembleRelease && cd .."
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.22",
+    "@react-navigation/native-stack": "^7.8.2",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-native": "0.76.6",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
