--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -18,8 +18,11 @@
     "@react-navigation/native-stack": "^7.8.2",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-fs": "^2.20.0",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.18.0"
+    "react-native-screens": "^4.18.0",
+    "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
