--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -14,6 +14,8 @@
     "build:apk": "cd android && ./gradlew assembleRelease && cd .."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/slider": "^5.1.1",
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/native-stack": "^7.8.2",
     "react": "18.3.1",
@@ -22,6 +24,7 @@
     "react-native-markdown-display": "^7.0.2",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
+    "react-native-sound": "^0.13.0",
     "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
