--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -25,7 +25,8 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-sound": "^0.13.0",
-    "react-native-sqlite-storage": "^6.0.1"
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-video": "^6.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
