--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -11,10 +11,9 @@
     "start:reset": "react-native start --reset-cache",
     "test": "jest",
     "clean": "cd android && gradlew clean && cd ..",
-    "build:apk": "cd android && ./gradlew assembleRelease && cd .."
+    "build:apk": "cd android && gradlew assembleRelease && cd .."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/slider": "^5.1.1",
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/native-stack": "^7.8.2",
@@ -22,9 +21,10 @@
     "react-native": "0.76.6",
     "react-native-fs": "^2.20.0",
     "react-native-markdown-display": "^7.0.2",
+    "react-native-mmkv": "^4.1.0",
+    "react-native-nitro-modules": "^0.31.10",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
-    "react-native-sound": "^0.13.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-video": "^6.18.0"
   },
