--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -26,7 +26,9 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-video": "^6.18.0"
+    "react-native-svg": "15.9.0",
+    "react-native-video": "^6.18.0",
+    "use-debounce": "^10.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -47,6 +49,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.2",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
