--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -11,7 +11,7 @@
     "start:reset": "react-native start --reset-cache",
     "test": "jest",
     "clean": "cd android && gradlew clean && cd ..",
-    "build:apk": "cd android && gradlew assembleRelease && cd .."
+    "build:apk": "cd android && gradlew assembleRelease && cd .. && start android\\app\\build\\outputs\\apk\\release"
   },
   "dependencies": {
     "@react-native-community/slider": "^5.1.1",
