--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.35",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.1.0",
     "rehype-highlight": "^7.0.2",
